# PC-nodes

./: .gitignore  README.md  building.ipynb  piston_spring.ipynb  pyproject.toml
data/: building_arx_errors.pkl  building_arx_model.pkl  building_parameters_default.pt  piston_spring_parameters_default_H_J_norm.pt  piston_spring_parameters_default_NN.pt  sequences.pt
pinode/data/: piston_spring.py
pinode/models/: building.py  piston_spring.py
pinode/util/: arx.py  plot.py  util.py
